# anscombe-transform

./: .gitignore  CITATION.cff  README.md  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish-to-pypi.yml  tests.yaml
docs/: contributing.md  spec.md
docs/api/: estimate.md
docs/examples/: workbook.md
docs/getting-started/: installation.md  quick-start.md
docs/spec/: anscombe_transform.md
docs/user-guide/: overview.md  parameter-estimation.md
examples/: workbook.ipynb
examples/test.zarr/: .zarray  0.0.0  0.0.1  0.1.0  0.1.1  0.2.0  0.2.1  0.3.0  0.3.1  1.0.0  1.0.1  1.1.0  1.1.1  1.2.0  1.2.1  1.3.0  1.3.1  2.0.0  2.0.1  2.1.0  2.1.1  2.2.0  2.2.1  2.3.0  2.3.1  3.0.0  3.0.1  3.1.0  3.1.1  3.2.0  3.2.1  3.3.0  3.3.1
src/anscombe_numcodecs/: __init__.py  codec.py
src/anscombe_transform/: __init__.py  codec.py  common.py  estimate.py
tests/: conftest.py  test_codec.py  test_loaddata.py  test_lookup.py  test_notebooks.py  test_zarr.py
