[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "anscombe_numcodecs"
dynamic = ["version"]

authors = [
  { name = "Jerome Lecoq", email = "jeromel@alleninstitute.org" },
  { name = "Dimitri Yatsenko", email = "dimitr@datajoint.com" },
  { name = "Davis Bennett", email = "davis.v.bennett@gmail.com" },
]
maintainers = [
  { name = "Dimitri Yatsenko", email = "dimitr@datajoint.com" },
]
license = { file = "LICENSE" }
description = "Zarr V2 and V3 codecs for compressing photon-limited movies."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["video compression", "numcodecs", "zarr", "compression algorithms", "multimedia", "multiphoton microscopy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
  "zarr>=3.1.2",
  "scikit-learn",
]

[project.optional-dependencies]
test = ["pytest==8.4.2", "pytest-cov"]
docs = [
  "mkdocs-material[imaging]>=9.6.14",
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
    "mike>=2.1.3",
    "mkdocs-redirects>=1.2.0",
    "markdown-exec[ansi]",
    "griffe-inherited-docstrings"
    ]

[project.urls]
Homepage = "https://github.com/datajoint/anscombe-numcodecs"
Source = "https://github.com/datajoint/anscombe-numcodecs"
Issues = "https://github.com/datajoint/anscombe-numcodecs/issues"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/anscombe_numcodecs/version.py"

# Test the package against the latest version of
# upstream dependencies
[tool.hatch.envs.upstream]
python="3.13"
dependencies=[
  "zarr @ git+https://github.com/zarr-developers/zarr-python.git@main",
  "numcodecs @ git+https://github.com/numcodecs/numcodecs.git@main",
  "scikit-learn @ git+https://github.com/scikit-learn/scikit-learn.git@main",
  ]

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.test]
features = ["test"]

[dependency-groups]
test = [
    "pytest==8.4.2",
    "pytest-cov"
]
dev = [
  {include-group="test"}
]

[tool.repo-review]
ignore = [
	"PC111",  # fix Python code in documentation - enable later
	"PC180",  # for JavaScript - not interested
]